--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 * {
-      margin: 0;
-      padding: 0;
+  margin: 0;
+  padding: 0;
 }
 body {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: #99948d;
+  background: #fff;
 }
 
 .container {
@@ -19,10 +19,10 @@ body {
 }
 
 .title {
-  font-family: "Canopee", sans-serif;
+  font-family: 'Canopee', sans-serif;
   font-size: 12vw;
   position: relative;
-  color: #99948d;
+  color: #fff;
   display: inline-block;
   margin: 0;
   padding: 0 15%;
